0.0205
  change : Build.PL requires => { Object::Simple => 2.0003 }

0.0204
  catch up Object::Simple update 2.0003
  change: errors methods dereference
  
0.0203
  rename add_validator to add_constraint
  rename validators to constraints
  rename $VALIDATORS to $CONSTRINTS
  catch up Object::Simple bag fix
  
0.0202
  bag fix: $validator is spliced
0.0201
  first release
0.01_01
  first develope release