@@ -1,16 +1,0 @@
-Build.PL
-Changes
-lib/Validator/Custom.pm
-Makefile.PL
-MANIFEST			This list of files
-META.yml
-README
-t/00-load.t
-t/01-core.t
-t/01-core/T1.pm
-t/01-core/T2.pm
-t/01-core/T3.pm
-t/01-core/T4.pm
-t/boilerplate.t
-t/pod-coverage.t
-t/pod.t
